[package]
name = "naysbot_v4"
version = "0.1.0"
authors = ["Michael L <michael.latino.c@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
tokio = { version = "1.5.0", features = ["full"] }
dotenv = "0.15.0"